# Momo-GhostBridge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md
scripts/: build-image.sh  deploy.sh  install.sh  panic.sh  setup-bridge.sh  teardown-bridge.sh
services/: ghostbridge-beacon.service  ghostbridge-stealth.service  ghostbridge-stealth.timer  ghostbridge-tunnel.service  ghostbridge.service
src/ghostbridge/: __init__.py  cli.py  main.py
src/ghostbridge/c2/: __init__.py  beacon.py  client.py  commands.py
src/ghostbridge/core/: __init__.py  bridge.py  config.py  stealth.py  tunnel.py
src/ghostbridge/infrastructure/: __init__.py
src/ghostbridge/infrastructure/dns/: __init__.py  client.py  encoder.py  tunnel.py
src/ghostbridge/infrastructure/network/: __init__.py  iproute.py  manager.py
src/ghostbridge/infrastructure/system/: __init__.py  ramfs.py  wipe.py
src/ghostbridge/infrastructure/wireguard/: __init__.py  config.py  manager.py
tests/: __init__.py  conftest.py  test_beacon.py  test_bridge.py  test_cli.py  test_config.py  test_dns_tunnel.py  test_iproute.py  test_main.py  test_stealth.py  test_tunnel.py  test_wireguard.py
