[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbridge"
version = "0.6.0"
description = "Transparent network implant for Red Team persistence operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MoMo Team"}
]
keywords = ["security", "red-team", "network", "bridge", "vpn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "asyncio-throttle>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
ghostbridge = "ghostbridge.cli:main"
gb = "ghostbridge.cli:main"

[project.urls]
Homepage = "https://github.com/momo/ghostbridge"
Documentation = "https://github.com/momo/ghostbridge/docs"
Repository = "https://github.com/momo/ghostbridge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# CLI output formatting - long lines acceptable
"src/ghostbridge/cli.py" = ["E501"]
# Infrastructure may have complex network parsing
"src/ghostbridge/infrastructure/**/*.py" = ["E501", "B904"]
# C2 client re-raises exceptions intentionally
"src/ghostbridge/c2/*.py" = ["B904"]
# Tests
"tests/**/*.py" = ["F401", "B904"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=ghostbridge --cov-report=term-missing"

